state management using REdux

--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -47,6 +47,14 @@ body {
     align-items: center;
     justify-content: center;
 }
+
+.product-category {
+    margin: 1vh 1vw 1vh 1vw;
+    padding: 0 1vw 0 1vw;
+    background-color: #ffffff;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
 .product-list {
     display: flex;
     flex-wrap: wrap;
@@ -85,11 +93,6 @@ body {
     font-size: 1.2rem;
     font-weight: bold;
     margin-top: 10px;
-}
-
-.product-category {
-    font-style: italic;
-    margin-bottom: 10px;
 }
 
 .product-price {
